# s0crate

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  config.py  logging_config.py  main.py  sidecar.py
backend/ai/: engine.py  prompts.py
backend/api/: models.py  routes.py
backend/learning/: compression.py  navigator.py  phases.py  session.py  syllabus.py
backend/memory/: filesystem.py
docs/: FIX_TODOS.md  H5_PLAN.md  PRD.md
docs/design/: Socrate Prototype.html  chat-view.jsx  data.jsx  home-and-settings.jsx  map-view.jsx  sidebar.jsx  styles.css
h5/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
h5/src/: App.tsx  index.css
h5/src/components/: BottomNav.tsx  ChatView.tsx  DrawerNav.tsx  HomeView.tsx
h5/src/components/Fork/: ForkView.tsx
h5/src/lib/: api.ts  types.ts
h5/src/stores/: sessionStore.ts  settingsStore.ts
scripts/: bootstrap.sh  dev.sh  package-tauri.sh  tauri-dev.sh
src/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: socrate-backend-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/src/: App.tsx  index.css
src/src/components/: HomeView.tsx  MapView.tsx
src/src/lib/: api.ts  types.ts
src/src/stores/: sessionStore.ts  settingsStore.ts
(+5 files in other folders)
