[project]
name = "socrate"
version = "0.1.0"
description = "AI-powered guided learning desktop app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "python-slugify>=8.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
socrate = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
